Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-84660

QWebEngineView double click on pepper plugins (flash player) don't work

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.15.1
    • 5.14.1
    • WebEngine, WebView
    • None
    • Linux/X11, Windows
    • 7c966f59a8f8f8a51ffe4325f0809e0d3363a9fc (qt/qtwebengine/5.15)

      Hello,

       

      I have noticed that double click did not work in Pepper plugin (Flash Player).

      Is there any solution?

       

      Thanks

      Regards

      Sergi

        For Gerrit Dashboard: QTBUG-84660
        # Subject Branch Project Status CR V

            ztamas Tamas Zakor
            bdnsergi bdnsergi
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes