Fix double click event on flash content

The blink::WebInputEvent::kMouseUp event sets the
WebMouseEvent::click_count to zero before the
blink::WebInputEvent::kMouseDown event handling is completed.
We need to keep the click_count value during mouse-up event.

Fixes: QTBUG-84660
Change-Id: I2494f56b51674413d7c8b324c138abcb7c0f9186
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>